@@ -1,4 +1,5 @@
 0.05
+ - Parameter 'num_generated' rewrite to use check_required().
  - Update to Data::HashType@0.05 without 'active' parameter.
 
 0.04 2024-03-22T16:08:10+01:00
